[tool.poetry]
name = "ttp"
version = "1.2.0"
description = "Time tracker"
authors = ["Alex Davies <traverse.da@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
ttp = "ttp.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
click = "^8.1.3"
arrow = "^1.2.2"
dateparser = "^1.1.1"
Jinja2 = "^3.1.2"
Pygments = "^2.12.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
